tests/baselines/reference/arrowFunctionMissingCurlyWithSemicolon.errors.txt
arrowFunctionMissingCurlyWithSemicolon.ts(2,15): error TS1109: Expression expected.


==== arrowFunctionMissingCurlyWithSemicolon.ts (1 errors) ====
    // Should error at semicolon.
    var f = () => ;
                  ~
!!! error TS1109: Expression expected.
    var b = 1 * 2 * 3 * 4;
    var square = (x: number) => x * x;